--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Secret</title>
+  <title>BeltExam</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if flash[:errors] %>
-  <% flash[:errors].each do |e| %>
-    <p><%= e %></p>
-  <% end %>
-<% end %>
-<% if current_user %>
-  <form action="/sessions/<%= session[:user]['id'] %>" method='post'>
-    <input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
-    <input type='hidden' name='_method' value='delete'>
-    <input type='submit' value='Log Out'>
-  </form>
-<% end %>
+  <% if flash[:errors] %>
+      <% flash[:errors].each do |e| %>
+        <p><%= e %></p>
+      <% end %>
+    <% end %>
+    <% if current_user %>
+      <form action="/sessions/<%= session[:user_id] %>" method='post'>
+        <input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>'>
+        <input type='hidden' name='_method' value='delete'>
+        <input type='submit' value='Log Out'>
+      </form>
+      <form action="/users/<%= session[:user_id] %>">
+        <input type='submit' value='Edit Profile'>
+      </form>
+      <a href="/events">Event Dashboard</a>
+    <% end %>
 <%= yield %>
+
 </body>
 </html>
